fix: dark mode for card background

--- a/src/components/Card/Card.sass
+++ b/src/components/Card/Card.sass
@@ -5,7 +5,7 @@
 	flex-direction: column
 	flex-grow: 1
 	flex-shrink: 0
-	background-color: $white
+	@include theme-background-white-else-graydark
 	box-shadow: 0 3px 5px 0 rgba($gray-dark, 0.15)
 	border-radius: 4px
 	overflow: hidden
